# aws-iam-roles-anywhere-public-demo

./: .gitignore  README.md  create-ca.sh  destroy-ca.sh
python-iam-anywhere-test/: pyproject.toml  test.py
root-ca/: client-ca.conf  root-ca.conf
terraform/: .terraform.lock.hcl  iam.tf  outputs.tf  provider.tf
