[project]
name = "python-iam-anywhere-test"
version = "0.1.0"
description = "IAM Roles Anywhere demo"
authors = [
    {name = "John McCracken",email = "johnmccuk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.40.15,<2.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
